[project]
name = "alchemytests"
version = "0.1.0"
description = ""
authors = [
    {name = "a.dolgov",email = "dolgov_am@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic (>=1.15.2,<2.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "psycopg (>=3.2.6,<4.0.0)",
    "psycopg-binary (>=3.2.6,<4.0.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "pydantic (>=2.11.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
